--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,6 +1,6 @@
 ﻿body {
     background-image: url(/img/background.png);
-    background-color: cornsilk;
+    background-color: khaki;
     font: 1.5em/2 georgia;
     padding: 10% 0 0 15%;
 }
@@ -8,9 +8,9 @@
 div{
     display: inline-block;
     background: white;
-    border: 1px solid silver;
     border-radius: 10px;
     padding: 2em 4em 2em 2em;
+    box-shadow: 0 0 15px 3px black;
 }
 
 div h1,
