--- a/src/css/site.css
+++ b/src/css/site.css
@@ -5,7 +5,7 @@
     padding: 10% 0 0 15%;
 }
 
-div{
+div {
     display: inline-block;
     background: white;
     border-radius: 10px;
@@ -13,8 +13,13 @@ div{
     box-shadow: 0 0 15px 3px black;
 }
 
-div h1,
-div p{
-    padding: 0;
-    margin: 0;
-}
+    div h1,
+    div h2 {
+        padding: 0;
+        margin: 0;
+    }
+
+    div h2 {
+        font-size: 1em;
+        font-weight: normal;
+    }
